Fix the overlap on different resolution

--- a/src/styles/display/_progressbar.scss
+++ b/src/styles/display/_progressbar.scss
@@ -1,6 +1,7 @@
 @import "../color";
 
 .progressbar {
+    margin-top: 20px;
     width: 50%;
     display: flex;
     flex-direction: column;
