--- a/src/styles/display/_questions.scss
+++ b/src/styles/display/_questions.scss
@@ -6,15 +6,13 @@
     align-items: center;
     flex: flex-grow;
     .questions-title {
-        margin-top: 5px;
+        margin-top: 20px;
         margin-bottom: 20px;
         color: $text-color;
-        border: 1px solid orange;
     }
     .questions {
-        border: 1px solid green;
         width: 100%;
-        height: 20vh;
+        height: 25vh;
         padding: 5px 0px 5px 0px;
         .short-answer {
             height: 100%;
@@ -25,6 +23,8 @@
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             width: 80%;
+            height: 80%;
+            min-height: fit-content;
             margin: auto;
             .option {
                 padding: 10px;
