--- a/src/styles/display/_stepButtons.scss
+++ b/src/styles/display/_stepButtons.scss
@@ -1,5 +1,4 @@
 .step-buttons {
-    border: 1px solid blue;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
